--- a/src/restaurantlist/templates/categorydetails.template.html
+++ b/src/restaurantlist/templates/categorydetails.template.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<li ng-repeat="categoryDet in $ctrl.category">
+    {{categoryDet.name}}
+    {{categoryDet.price_large}}
+</li>
 
-</body>
-</html>
